--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -91,6 +91,7 @@ $black-54: rgba(0, 0, 0, 0.6);
 $black-37: rgba(0, 0, 0, 0.37);
 $black-20: rgba(0, 0, 0, 0.2);
 $black-10: rgba(0, 0, 0, 0.1);
+$black-6: rgba(0, 0, 0, 0.06);
 $black-4: rgba(0, 0, 0, 0.04);
 
 // States
