docs: argilla community meetup button (#4077)
<!-- Thanks for your contribution! As part of our Community Growers
initiative 🌱, we're donating Justdiggit bunds in your name to reforest
sub-Saharan Africa. To claim your Community Growers certificate, please
contact David Berenstein in our Slack community or fill in this form
https://tally.so/r/n9XrxK once your PR has been merged. -->

# Description

I updated the docs to include the community meetup within lu.ma

**Type of change**

(Remember to title the PR according to the type of change)

- [X] Documentation update

**How Has This Been Tested**

(Please describe the tests that you ran to verify your changes.)

- [X] `sphinx-autobuild` (read [Developer
Documentation](https://docs.argilla.io/en/latest/community/developer_docs.html#building-the-documentation)
for more details)

**Checklist**

- [X] I added relevant documentation
- [X] I followed the style guidelines of this project
- [X] I did a self-review of my code
- [X] I made corresponding changes to the documentation
- [X] My changes generate no new warnings
- [ ] I filled out [the contributor form](https://tally.so/r/n9XrxK)
(see text above)
- [X] I have added relevant notes to the `CHANGELOG.md` file (See
https://keepachangelog.com/)

--- a/docs/_source/_static/css/custom.css
+++ b/docs/_source/_static/css/custom.css
@@ -151,6 +151,25 @@ h2 {
   background: linear-gradient(-45deg, #c13030, #e25a55);
 }
 
+.floating-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: white !important;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  z-index: 100; /* Make sure it's above your content */
+  background: linear-gradient(-45deg, #e73a3a, #fa655f);
+  text-align: center;
+}
+.floating-button:hover {
+  color: white !important;
+  transition: all 0.3s ease-in-out;
+  background: linear-gradient(-45deg, #c13030, #e25a55);
+}
+
 
 
 .content .note .wy-alert-title,
