--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -48,7 +48,10 @@ $palettes: (
     base: #f2067a,
   ),
   yellow: (
-    400: #fce659,
+    400: #feef75,
+  ),
+  orange: (
+    400: #fdbc4d,
   ),
   orange-red-crayola: (
     base: #ff675f,
