--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -48,9 +48,10 @@ $palettes: (
     base: #f2067a,
   ),
   yellow: (
-    base: #fff8a2,
-    light: #949494,
-    dark: #1d1d1d,
+    400: #feef75,
+  ),
+  orange: (
+    400: #fdbc4d,
   ),
   orange-red-crayola: (
     base: #ff675f,
