--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -29,6 +29,7 @@ $palettes: (
     200: #4d4d4d,
     300: #686a6d,
     400: #838589,
+    500: #a7a7a7,
     600: #e6e6e6,
     700: #f5f5f5,
     800: #fafafa,
@@ -103,6 +104,12 @@ $danger: palette(red);
 $warning: palette(apricot, dark);
 $success: palette(green);
 $info: palette(grey, 600);
+
+// Status color
+//----------------
+$submitted-color: $primary-color;
+$discarded-color: palette(grey, 500);
+$pending-color: palette(brown);
 
 // Fonts
 //-----------
