update draft status and allow metrics to show it

--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -45,7 +45,7 @@ $palettes: (
     800: #f0f0fe,
   ),
   pink: (
-    base: #f2067a,
+    base: #73bfbd,
   ),
   yellow: (
     base: #fff8a2,
@@ -68,6 +68,9 @@ $palettes: (
   ),
   red: (
     base: #cf3832,
+  ),
+  turquoise: (
+    base: #22b2ae,
   ),
 );
 
