--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -113,6 +113,7 @@ $info: palette(grey, 600);
 $submitted-color: $primary-color;
 $discarded-color: palette(grey, 500);
 $pending-color: palette(brown);
+$draft-color: palette(turquoise);
 
 // Fonts
 //-----------
