--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -46,7 +46,7 @@ $palettes: (
     800: #f0f0fe,
   ),
   pink: (
-    base: #f2067a,
+    base: #73bfbd,
   ),
   yellow: (
     400: #fee075,
@@ -70,6 +70,9 @@ $palettes: (
   ),
   red: (
     base: #cf3832,
+  ),
+  turquoise: (
+    base: #08a4bd,
   ),
 );
 
@@ -110,6 +113,7 @@ $info: palette(grey, 600);
 $submitted-color: $primary-color;
 $discarded-color: palette(grey, 500);
 $pending-color: palette(brown);
+$draft-color: palette(turquoise);
 
 // Fonts
 //-----------
