include new color variables

--- a/frontend/assets/scss/abstract/variables/_variables.scss
+++ b/frontend/assets/scss/abstract/variables/_variables.scss
@@ -115,6 +115,16 @@ $discarded-color: palette(grey, 500);
 $pending-color: palette(brown);
 $draft-color: palette(turquoise);
 
+$submitted-color-medium: #92a8fc;
+$discarded-color-medium: #cbcbcb;
+$pending-color-medium: #fbc27d;
+$draft-color-medium: #93d9e3;
+
+$submitted-color-light: #b3c4ff;
+$discarded-color-light: #e0dddd;
+$pending-color-light: #fdebd9;
+$draft-color-light: #b2e6ee;
+
 // Fonts
 //-----------
 $primary-font-family: "Inter", "Helvetica", "Arial", sans-serif;
