update translation and fix tooltip

--- a/frontend/assets/scss/abstract/placeholders/_tooltip.scss
+++ b/frontend/assets/scss/abstract/placeholders/_tooltip.scss
@@ -186,5 +186,6 @@ $tooltip-border-radius: $border-radius-s;
     @include font-size(12px);
     line-height: 1.2;
     white-space: pre;
+    text-transform: none;
   }
 }
